[project]
name = "route-optimization"
version = "0.1.0"
description = "Mining routes optimization for the Quantum Quipu hackaton"
readme = "README.md"
authors = [
    { name = "Kaue Miziara", email = "kauemiziara@gmail.com" },
    { name = "Julia Santos", email = "juliasantos7652@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "dimod>=0.12.21",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "qiskit>=2.3.0",
    "qiskit-optimization>=0.7.0",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.13"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP"]

ignore = ["E741", "N806"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
